hphp/hack/test/typecheck/const_attribute/single_const_attribute_outside_class.php.exp
File "single_const_attribute_outside_class.php", line 20, characters 15-16:
Cannot mutate a __Const property (Typing[4196])
